Add `--add-modules`  for the test processes on Java 11